--- a/css/agency.css
+++ b/css/agency.css
@@ -175,7 +175,7 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-brand {
-    font-family: "Aero","Helvetica Neue",Helvetica,Arial,cursive;
+    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
     color: #27A2E1;
 }
 
@@ -275,7 +275,6 @@ header {
 }
 
 header .intro-text {
-    /*padding-top: 100px;*/
     padding-bottom: 50px;
 }
 
@@ -298,7 +297,7 @@ header .intro-text .intro-heading {
 
 @media(min-width:768px) {
     header .intro-text {
-        padding-top: 300px;
+        padding-top: 120px;
         padding-bottom: 200px;
     }
 
